@@ -1748,7 +1748,8 @@ newobj_of(VALUE klass, VALUE flags, VALUE v1, VALUE v2, VALUE v3)
     {
 	static int newobj_cnt = RGENGC_OLD_NEWOBJ_CHECK;
 
-	if (flags & FL_WB_PROTECTED &&   /* do not promote WB unprotected objects */
+	if (!is_incremental_marking(objspace) &&
+	    flags & FL_WB_PROTECTED &&   /* do not promote WB unprotected objects */
 	    ! RB_TYPE_P(obj, T_ARRAY)) { /* array.c assumes that allocated objects are new */
 	    if (--newobj_cnt == 0) {
 		newobj_cnt = RGENGC_OLD_NEWOBJ_CHECK;
@@ -1756,10 +1757,7 @@ newobj_of(VALUE klass, VALUE flags, VALUE v1, VALUE v2, VALUE v3)
 		gc_mark_set(objspace, obj);
 		RVALUE_AGE_SET_OLD(objspace, obj);
 
-		if (is_pointer_to_heap(objspace, (void *)klass)) RB_OBJ_WRITTEN(obj, Qundef, klass);
-		if (is_pointer_to_heap(objspace, (void *)v1))    RB_OBJ_WRITTEN(obj, Qundef, v1);
-		if (is_pointer_to_heap(objspace, (void *)v2))    RB_OBJ_WRITTEN(obj, Qundef, v2);
-		if (is_pointer_to_heap(objspace, (void *)v3))    RB_OBJ_WRITTEN(obj, Qundef, v3);
+		rb_gc_writebarrier_remember(obj);
 	    }
 	}
     }
